# PapernestTechnicalTest

./: 2018_01_Sites_mobiles_2G_3G_4G_France_metropolitaine_L93_ver2.csv  README.md  manage.py  pyproject.toml  requirements.txt
api/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
api/management/commands/: init_network_provider_tower_data.py
api/migrations/: 0001_initial.py
papernesttechnicaltest/: asgi.py  local_settings_exemple.py  settings.py  urls.py  wsgi.py
