[tool.poetry]
name = "papernesttechnicaltest"
version = "0.1.0"
description = ""
authors = ["Romain BAUDIN <rbaudin@simco.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyproj = "^3.7.1"
requests = "^2.32.3"
httpx = "^0.28.1"
asyncio = "^3.4.3"
adrf = "^0.1.9"
psycopg2-binary = "^2.9.10"
django = "4.1"
drf-spectacular = "^0.28.0"
pytest-django = "^4.10.0"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "papernesttechnicaltest.settings"
python_files = "tests.py test_*.py *_tests.py"
